--- a/intrn.html
+++ b/intrn.html
@@ -16,7 +16,7 @@
 		<marquee direction="right">Bumper sale on this Festive season</marquee> 
 		<div class="sign-up-form" align="right">
 		<h1 align="right">SIGN UP NOW</h1>
-		<form>
+		<form action="register.php" method="POST">
 		<input type="email" class="input-box" placeholder="YOUR email">
 		<input type="password" class="input-box" placeholder="YOUR password">
 		<p><span><input type="checkbox"></span> i agree to the terms and condition</p>
